--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
 version: "2"
 services:
-  varnish:
-    image: meanbee/magento2-varnish:latest
-    environment:
-      - VIRTUAL_HOST=magento2.docker
-      - VIRTUAL_PORT=80
-      - HTTPS_METHOD=noredirect
-    ports:
-      - 80
-    links:
-      - web
+#  varnish:
+#    image: meanbee/magento2-varnish:latest
+#    environment:
+#      - VIRTUAL_HOST=magento2.docker
+#      - VIRTUAL_PORT=80
+#      - HTTPS_METHOD=noredirect
+#    ports:
+#      - 80
+#    links:
+#      - web
 
   web:
     image: meanbee/magento2-nginx:1.9
     ports:
-      - 80
+      - 8080:80
     links:
       - fpm
       - db
@@ -22,14 +22,15 @@ services:
       - appdata
     env_file:
       - ./global.env
-    #environment:
-      #- VIRTUAL_HOST=magento2.docker
-      #- VIRTUAL_PORT=80
-      #- HTTPS_METHOD=noredirect
+    environment:
+      - VIRTUAL_HOST=magento2.docker
+      - VIRTUAL_PORT=80
+      - HTTPS_METHOD=noredirect
 
   fpm:
     hostname: fpm.magento2.docker
-    image: meanbee/magento2-php:7.0-fpm
+    image: meanbee/magento2-php:7.2-fpm
+    build: ./7.2-fpm
     ports:
       - 9000
     links:
@@ -54,7 +55,8 @@ services:
 
   cli:
     hostname: cli.magento2.docker
-    image: meanbee/magento2-php:7.0-cli
+    image: meanbee/magento2-php:7.2-cli
+    build: ./7.2-cli
     links:
       - db
     volumes:
@@ -70,7 +72,7 @@ services:
       - M2SETUP_DB_NAME=magento2
       - M2SETUP_DB_USER=magento2
       - M2SETUP_DB_PASSWORD=magento2
-      - M2SETUP_BASE_URL=http://magento2.docker/
+      - M2SETUP_BASE_URL=http://magento2.docker:8080/
       # - M2SETUP_SECURE_BASE_URL=https://magento2.docker/
       - M2SETUP_BACKEND_FRONTNAME=admin
       - M2SETUP_ADMIN_FIRSTNAME=Admin
@@ -78,11 +80,12 @@ services:
       - M2SETUP_ADMIN_EMAIL=dummy@gmail.com
       - M2SETUP_ADMIN_USER=admin
       - M2SETUP_ADMIN_PASSWORD=password1
-      - M2SETUP_VERSION=2.1.*
+      - M2SETUP_VERSION=2.3.*
       # - M2SETUP_USE_SAMPLE_DATA=true
 
   cron:
-    image: meanbee/magento2-php:7.0-cli
+    image: meanbee/magento2-php:7.2-cli
+    build: ./7.2-cli
     hostname: magento2-cron.docker
     command: run-cron
     env_file:
