--- a/7.2-cli/Dockerfile
+++ b/7.2-cli/Dockerfile
@@ -9,6 +9,7 @@ MAINTAINER Nick Jones <nick@nicksays.co.uk>
 # Install dependencies
 RUN apt-get update \
   && apt-get install -y \
+    pkg-config patch \
     libfreetype6-dev \ 
     libicu-dev \ 
     libjpeg62-turbo-dev \ 
@@ -20,8 +21,16 @@ RUN apt-get update \
     sudo \ 
     cron \ 
     rsyslog \ 
-    mysql-client \ 
-    git
+    mariadb-client \
+    git \
+    libsodium-dev
+
+ADD "https://git.archlinux.org/svntogit/packages.git/plain/trunk/freetype.patch?h=packages/php" /tmp/freetype.patch
+
+RUN docker-php-source extract; \
+  cd /usr/src/php; \
+  patch -p1 -i /tmp/freetype.patch; \
+  rm /tmp/freetype.patch
 
 # Configure the gd library
 RUN docker-php-ext-configure \
@@ -38,7 +47,8 @@ RUN docker-php-ext-install \
   xsl \ 
   zip \ 
   soap \ 
-  bcmath
+  bcmath \
+  sodium
 
 # Install Xdebug (but don't enable)
 RUN pecl install -o -f xdebug
