--- a/nginx/etc/vhost.conf
+++ b/nginx/etc/vhost.conf
@@ -8,7 +8,7 @@ server {
     listen 80;
     listen 443 ssl;
 
-    server_name localhost;
+    server_name magento2.docker;
 
     set $MAGE_ROOT !MAGENTO_ROOT!; # Variable: MAGENTO_ROOT
     set $MAGE_MODE !MAGENTO_RUN_MODE!; # Variable: MAGENTO_RUN_MODE
